# yandiansai_finals-master

./: Algorithm specification.docx  README.md  System design.docx  User manual.docx
yandiansai_finals-master/: mypeople.param  mypeople2.param
yandiansai_finals-master/modify_params/: CMakeLists.txt  modify_poses.txt  package.xml
yandiansai_finals-master/modify_params/launch/: set_poses.launch
yandiansai_finals-master/modify_params/params/: narrow_params1.yaml  narrow_params2.yaml  wide_params1.yaml  wide_params2.yaml
yandiansai_finals-master/modify_params/scripts/: modify_params.py  test.py
yandiansai_finals-master/mqtt_robot_service/: CMakeLists.txt  package.xml
yandiansai_finals-master/mqtt_robot_service/launch/: mqtt_robot_service.launch  mqtt_robot_service_no_nav.launch  mqtt_robot_service_no_nav_yolo.launch
yandiansai_finals-master/mqtt_robot_service/scripts/: backup_publisher.py  backup_server.py  cancel_navigation_server.py  finalStepViaLidar.py  get_nav_poses.py  isObstacle_server.py  main_process.py  move_robot.py  pub_image_server.py  pub_nav_poses.py  robot_publisher.py  robot_subscriber.py  rooms_load.py  servers.py  sub_status.py  test.py  yolo_result_server.py
yandiansai_finals-master/mqtt_robot_service/srv/: FinalStep.srv  IsObstacle.srv  Stop.srv  YoloResult.srv
yandiansai_finals-master/ncnn_ros/: CMakeLists.txt  package.xml
yandiansai_finals-master/ncnn_ros/launch/: .camera.launch.swp  .yolov5.launch.swp  camera.launch  nanodet.launch  yolact.launch  yolov3.launch  yolov5.launch  yolov7.launch  yolox.launch
yandiansai_finals-master/ncnn_ros/src/: ncnn_nanodet.cpp  ncnn_yolact.cpp  ncnn_yolov3.cpp  ncnn_yolov5.cpp  ncnn_yolov7.cpp  ncnn_yolox.cpp
yandiansai_finals-master/object_information_msgs/: CMakeLists.txt  package.xml
yandiansai_finals-master/object_information_msgs/msg/: Object.msg
yandiansai_finals-master/picture_server/: CMakeLists.txt  package.xml  readme.txt
yandiansai_finals-master/picture_server/scripts/: picture_server.py
yandiansai_finals-master/picture_server/src/: picture_server.cpp
yandiansai_finals-master/picture_server/srv/: image_cmd.srv
yandiansai_finals-master/record_goals/: CMakeLists.txt  goal_poses.txt  goal_rooms.txt  package.xml
yandiansai_finals-master/record_goals/launch/: set_poses.launch  set_rooms.launch
yandiansai_finals-master/record_goals/src/: set_poses.cpp  set_rooms.cpp
